--- a/.gitignore
+++ b/.gitignore
@@ -49,5 +49,9 @@ Temporary Items
 # Extraneous resources
 /game/cache
 /game/saves
+/game/tl/None
 errors.txt
+log.txt
+traceback.txt
+*.rpyc
 *.xcf
